--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,14 @@
       <version>5.6.0</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.10.19</version>
+      <scope>test</scope>
+    </dependency>
+
 
     <dependency>
       <groupId>org.openjfx</groupId>
